iptables_rules_NOK.txt
# Generated by iptables-save v1.6.0 on Mon Jul 24 15:12:33 2017
*mangle
:PREROUTING ACCEPT [2926:554913]
:INPUT ACCEPT [2313:341739]
:FORWARD ACCEPT [546:198467]
:OUTPUT ACCEPT [2275:733060]
:POSTROUTING ACCEPT [2829:932839]
-A PREROUTING ! -s 172.17.0.2/32 -i docker0 -p tcp -m tcp --dport 443 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING ! -s 172.17.0.2/32 -i docker0 -p tcp -m tcp --dport 80 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -p tcp -m tcp --dport 3128 -j DROP
COMMIT
# Completed on Mon Jul 24 15:12:33 2017
# Generated by iptables-save v1.6.0 on Mon Jul 24 15:12:33 2017
*nat
:PREROUTING ACCEPT [82:16974]
:INPUT ACCEPT [19:2507]
:OUTPUT ACCEPT [37:2638]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
-A PREROUTING -s 192.168.178.32/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A PREROUTING -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 3128
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT -o eno1 -p tcp -m tcp --dport 80 -m owner --uid-owner 13 -j ACCEPT
-A OUTPUT -o eno1 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 3129
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 -o docker0 -j ACCEPT
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-31b7bb7c0228 -j MASQUERADE
-A POSTROUTING -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p tcp -m tcp --dport 3128 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i br-31b7bb7c0228 -j RETURN
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 3128 -j DNAT --to-destination 172.17.0.2:3128
COMMIT
# Completed on Mon Jul 24 15:12:33 2017
# Generated by iptables-save v1.6.0 on Mon Jul 24 15:12:33 2017
*filter
:INPUT ACCEPT [2315:341843]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [2277:733308]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -o br-31b7bb7c0228 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-31b7bb7c0228 -j DOCKER
-A FORWARD -i br-31b7bb7c0228 ! -o br-31b7bb7c0228 -j ACCEPT
-A FORWARD -i br-31b7bb7c0228 -o br-31b7bb7c0228 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 3128 -j ACCEPT
-A DOCKER-ISOLATION -i br-31b7bb7c0228 -o docker0 -j DROP
-A DOCKER-ISOLATION -i docker0 -o br-31b7bb7c0228 -j DROP
-A DOCKER-ISOLATION -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Mon Jul 24 15:12:33 2017
